--- a/index.css
+++ b/index.css
@@ -325,7 +325,7 @@ scroll-page {
   position: relative;
 
 height: 200px;
-top: 50%;
+top: 20%; /*changé */
 left: 43%;
 margin-left: -150px;
 margin-top: -100px;
